Systeminfo* --> SystemInfo*, Reflect review comments.
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>